# gustarr

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.example.yml  flake.nix  gustarr.example.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  deployment.md  development.md  security.md
nix/: module.nix
src/gustarr/: __init__.py  candidates.py  cli.py  config.py  db.py  dedupe.py  enrich.py  http.py  identify.py  ids.py  pipeline.py  queue.py  scheduler.py  settings.py  signals.py
src/gustarr/actuate/: apply.py  arr_client.py  jellyfin_collections.py  jellyfin_playlist.py
src/gustarr/collect/: arr.py  jellyfin.py  lastfm.py  listenbrainz.py
src/gustarr/ml/: embed.py  rank.py  train.py
src/gustarr/web/: app.py
src/gustarr/web/static/: index.html
tests/: test_actuate.py  test_candidates.py  test_collect_arr.py  test_collect_jellyfin.py  test_collect_lastfm.py  test_collect_listenbrainz.py  test_dedupe.py  test_enrich.py  test_http.py  test_identify.py  test_ids.py  test_migration.py  test_ml.py  test_queue_pipeline.py  test_signals.py  test_web.py
