[project]
name = "gustarr"
version = "0.2.1"
description = "Media taste learning and Servarr automation: per-person profiles learn what you like from Jellyfin/Last.fm/ListenBrainz history and drive Sonarr/Radarr/Lidarr."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# GPU embedding + training. Kept optional so the CLI/actuator side stays
# lightweight — collectors and the web UI never need torch.
ml = [
    "torch>=2.4",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
gustarr = "gustarr.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gustarr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
